# chill-note

./: CMakeLists.txt  README.md
src/: chillnoteApp.cpp  chillnoteApp.h  stickynote.cpp  stickynote.h  topbar.cpp  topbar.h
